--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-symbols-outlined">login</span>
-                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+                        <input type="email" name="login" id="ilogin" placeholder=" Seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
                         <span class="material-symbols-outlined">vpn_key</span>
-                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <input type="password" name="senha" id="isenha" placeholder=" Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for=isenha>Senha</label>
                     </div>
-                    <input type="submit" value="Entrar">
+                    <input type="submit" value="Entrar" class="entrar">
                     <a href="esqueci.html" class="botao">Esqueci a senha
                         <span class="material-symbols-outlined">mail</span>
                     </a>
